# protobuf-format-diff

./: CMakeLists.txt  README.md  comparison.cpp  comparison.h  main.cpp  program_option.h
json/: json.hpp
tests/: CMakeLists.txt  test-op.cpp  test.cpp
tests/binary_enum_diff/: diff.json
tests/binary_message_diff/: diff.json
tests/enum_value_added/: diff.json
tests/enum_value_removed/: diff.json
tests/field_added/: diff.json
tests/field_enum_type_changed/: diff.json
tests/field_label_changed/: diff.json
tests/field_removed/: diff.json
tests/program_option/: test-op.json
